// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render icon briefcase 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-briefcase"
/>
`;

exports[`Icon should render icon checkmark 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-checkmark"
/>
`;

exports[`Icon should render icon chevron-down 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-chevron-down"
/>
`;

exports[`Icon should render icon chevron-up 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-chevron-up"
/>
`;

exports[`Icon should render icon cog 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-cog"
/>
`;

exports[`Icon should render icon eye 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-eye"
/>
`;

exports[`Icon should render icon home 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-home"
/>
`;

exports[`Icon should render icon pyramids 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-pyramids"
/>
`;

exports[`Icon should render icon rocket 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-rocket"
/>
`;

exports[`Icon should render icon users 1`] = `
<span
  className="sc-AxjAm jnaJRY lni lni-users"
/>
`;

exports[`Icon should render icon with custom styles 1`] = `
<span
  className="sc-AxirZ dPuKDt sc-AxjAm jnaJRY lni lni-home"
/>
`;
